2004-07-21  Florian Boor <florian.boor@kernelconcepts.de>

    * Makefile: Working on V 0.54 now.
    * main.c: Make default window size a little bit cleverer.
    * year_view.*, month_view.*, week_view.*, future_view.*:
      Added function to free allocated lists from eventdb.
    * event-ui.c: Added handling of escape and enter keys to abort/save.
    * import-vcal.c: import_vcal(): Returns success now. 
                     Removed obsolete dialog.
    * main.c: Import status dialog, error detection.

2004-07-20  Florian Boor <florian.boor@kernelconcepts.de>

    * import-vcal.h: New file.
    * import-vcal.c: New files taken from gpe-bluetooth by Philip Blundell.
    * main.c, Makefile: Started to add VCAL import facility.
    * month_view.c: Improved year handling.
    * month_view.c: Improved keyboard controls.    

2004-07-19  Florian Boor <florian.boor@kernelconcepts.de>

    * month_view.c: Started simple keyboard control.
    * day_view.c: Keyboard control improvements, still not perfect.
    * week_view.c, day_popup.c: Improved UI, event creation for wek view,
                                fixed some bugs in time handling. 
    * day_popup.*: Keyboard control update, parameter wether to show items 
                   or not.

2004-07-16  Florian Boor <florian.boor@kernelconcepts.de>
    
    * day_popup.c: Started some keyboard controls.
    * week_view.c: More keyboard controls and basic popups.
    * week_view.c: Very basic keyboard controls for week view.
    * week_view.c: Formating updates, minor painting improvements.
    
2004-07-15  Florian Boor <florian.boor@kernelconcepts.de>

    * day_view.c: selection_made() Changed clicking behaviour to start edit
                  on click on any entry.
    * day_view.c: Started implementing keyboard control, deleting of events.
    * main.c: Removed hardcoded toolbar style.
    * day_view.c: Don't display very early/late slots if they are not used.