@@ -13,6 +13,7 @@
 
 extern GList *times;
 extern time_t viewtime;
+extern gboolean force_today;
 
 extern void update_current_view (void);
 extern void update_all_views (void);
@@ -22,6 +23,7 @@ extern gboolean week_starts_monday;
 extern guint week_offset;
 extern gboolean day_view_combined_times;
 extern void set_time_and_day_view(time_t selected_time);
+extern void set_day(int year, int month, int day);
 
 extern GdkPixmap *close_pix, *day_pix;
 extern GdkBitmap *close_mask, *day_mask;
