@@ -1,3 +1,10 @@
+2004-07-22  Florian Boor <florian.boor@kernelconcepts.de>
+    
+    * event_ui.c: Multiple optical uodates and small fixes.
+                  Set default focus to text field, set some window parameters.
+    * main.c: Added function to set current date.
+    * *view.c: Honor global setting to today.
+
 2004-07-21  Florian Boor <florian.boor@kernelconcepts.de>
 
     * Makefile: Working on V 0.54 now.
